<resources>
    <string name="app_name">Конфиденция</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_firstName">Имя</string>
    <string name="prompt_secondName">Фамилия</string>
    <string name="prompt_phone">Телефон</string>
    <string name="action_sign_in">Зарегистрироваться</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Добро пожаловать !"</string>
    <string name="invalid_username">Такой пользователь не найден</string>
    <string name="invalid_password">Пароль должен быть более 5 символов</string>
    <string name="login_failed">"Не удалось войти"</string>
    <string name="invalid_code">Заполните поле</string>
    <string name="invalid_lenght">"Код не может быть больше 4 цифр "</string>
    <string name="invalid_firstName">"Имя не может быть пустым"</string>
    <string name="invalid_secondName">"Фамилия не может быть пустым "</string>
    <string name="invalid_middleName">"Отчество не может быть пустым "</string>
</resources>